@@ -2,7 +2,6 @@
 Model for testing of display string features.
 
 Does not (yet) test a bunch of features such as:
-- background border and fill
 - rectangle border and fill; 
 - ovals
 - queue length display (q=), transmission range display (r=)
