@@ -1,0 +1,9 @@
+import "dummy";
+
+module Background
+    submodules:
+        icon1: Dummy;
+            display: "p=100,80;i=block/sink;t=bg should be 500x500 yellow\nw/ thick blue border";
+    display: "b=500,500;o=yellow,blue,10";
+endmodule
+
