@@ -4,6 +4,7 @@ import "active";
 import "textandtooltip";
 import "conntextandtooltip";
 import "nedparams";
+import "background";
 
 module DisplayStringTest
     submodules:
@@ -13,6 +14,7 @@ module DisplayStringTest
         textAndTooltip: TextAndTooltip;
         connTextAndTooltip: ConnTextAndTooltip;
         nedParams: NedParams;
+        background: Background;
 endmodule
 
 network displayStringTest : DisplayStringTest
