@@ -1,3 +1,8 @@
+2005-04-08  Andras Varga
+
+	* cnednetworkbuilder.cc: background display strings were not set
+	properly
+
 2005-03-31  ------ omnetpp-3.1 released ------
 
 2005-03-19  Andras Varga
